# pyesmda

./: .codacy.yml  .codespellrc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  bibliography.bib  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
docs/: Makefile  make.bat
docs/source/: api_reference.rst  conf.py  installation.rst  usage.rst
docs/source/_autosummary/: pyesmda.ESMDA_RS.rst
docs/sources/: conf.py  index.rst  installation.rst  theory.rst  usage.rst
docs/sources/tutorials/: correlation_matrices_building.nblink  example_exponential.nblink
pyesmda/: __about__.py  __init__.py  _base.py  _esmda.py  _esmda_dmc.py  _esmda_rs.py  _inversion.py  _localization.py  _utils.py  base.py  esmda.py  esmda_dmc.py  esmda_rs.py  inversion.py  localization.py  utils.py
tests/: test_esmda.py  test_esmda_dmc.py  test_esmda_rs.py  test_inversion.py  test_localization.py  test_utils.py
tutorials/: correlation_matrices_building.ipynb  example_exponential.ipynb  requirements_tuto.txt
