[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyesmda"
dynamic = ["version"]
authors = [{ name = "Antoine Collet", email = "antoinecollet5@gmail.com" }]
readme = "README.rst"
description = "Python Ensemble Smoother with Multiple Data Assimilation."
keywords = [
    "esmda",
    "es-mda",
    "inversion",
    "inverse problem",
    "parameter estimation",
    "stochastic-optimization",
    "ensemble smoother",
]
license = { text = "MIT license" }
dependencies = [
    "setuptools>=61.1.1",
    "wheel",
    "numpy>=1.2",
    "scipy>=1.6.2",
    "typing_extensions; python_version < '3.8'",
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://pypi.org/project/pyesmda/"
Documentation = "https://pyesmda.readthedocs.io/en/latest/"
Repository = "https://github.com/antoinecollet5/pyesmda"
Issues = "https://github.com/antoinecollet5/pyesmda/issues"
Changelog = "https://github.com/antoinecollet5/pyesmda/blob/master/CHANGELOG.rst"

[tool.setuptools]
py-modules = []
packages = ["pyesmda"]

[tool.setuptools.dynamic]
version = { attr = "pyesmda.__about__.__version__" }

[tool.rye]
dev-dependencies = [
    "pytest>=8.2.2",
    "py7zr",
    "testpath",
    "pre-commit",
    "ruff",
    "mypy",
    "tox",
    "coverage",
]

[tool.ruff]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
]
src = ["src", "tests", "docs"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "I"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pylint.LOGGING]
# Format style used to check logging format string. `old` means using %
# formatting, `new` is for `{}` formatting,and `fstr` is for f-strings.
logging-format-style = "fstr"
