[build-system]
requires = ["setuptools>=42,<=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pyesmda"
dynamic = ["version"]
authors = [{ name = "Antoine Collet", email = "antoinecollet5@gmail.com" }]
readme = "README.rst"
description = "Python Ensemble Smoother with Multiple Data Assimilation."
keywords = [
    "esmda",
    "es-mda",
    "inversion",
    "inverse problem",
    "parameter estimation",
    "stochastic-optimization",
    "ensemble smoother",

]
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.2",
    "scipy>=1.6.2",
    "covmats>=0.2.2"
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://pypi.org/project/pyesmda/"
Documentation = "https://pyesmda.readthedocs.io/en/latest/"
Repository = "https://github.com/antoinecollet5/pyesmda"
Issues = "https://github.com/antoinecollet5/pyesmda/issues"
Changelog = "https://github.com/antoinecollet5/pyesmda/blob/master/CHANGELOG.rst"

[tool.setuptools]
py-modules = []
packages = ["pyesmda"]

[tool.setuptools.dynamic]
version = { attr = "pyesmda.__about__.__version__" }

[project.optional-dependencies]
all = ['pyesmda[install, lint, tests, examples, docs]']
docs = [
    "pyesmda[examples]",
    "sphinx<9",
    "nbsphinx",
    "nbsphinx-link>=1.3.1",
    "jupyter_sphinx>=0.3.2",
    "sphinx-jsonschema>=1.15",
    "pygments>=2.11.1",
    "pydata-sphinx-theme",
    "sphinxcontrib-bibtex",
    "sphinx_math_dollar",
    "jupytext",
]
tests = [
    "twine==1.14.0",
    "pytest",
    "pytest-runner",
    "pytest-cov",
    "pytest-cookies",
    "coverage",
]
examples = ["matplotlib", "Ipykernel", "Ipython", "nested_grid_plotter"]
lint = ["pre-commit", "codespell>=2.1.0", "ruff", "ty"]
install = ["pip", "wheel"]

[tool.ruff]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
]
src = ["src", "tests", "docs"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "I"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pylint.LOGGING]
# Format style used to check logging format string. `old` means using %
# formatting, `new` is for `{}` formatting,and `fstr` is for f-strings.
logging-format-style = "fstr"
